--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rock-Paper-Scissors Game</title>
 </head>
 <body>
-
+    <div id="container"></div>
 
     <script src="./index.js"></script>
 </body>
