--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Rock-Paper-Scissors Game</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissor">Scissor</button>
+    </div>
+
+    <div class="display"></div>
 
     <script src="./index.js"></script>
 </body>
